--- a/Application/templates/base.html
+++ b/Application/templates/base.html
@@ -9,7 +9,10 @@
         {%endif%}
     </head>
     <body>
-        <nav>SocialTalks: <a href="/index">Home</a></nav>
+        <nav>SocialTalks: 
+            <a href="/index">Home</a>
+            <a href="/login">Login</a>
+        </nav>
         <hr>
         {% block con %}
         {% endblock %}            
