--- a/Application/templates/base.html
+++ b/Application/templates/base.html
@@ -7,9 +7,10 @@
         {%else%}
         <title>SocialTalks</title>
         {%endif%}
+        <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
     </head>
     <body>
-        <nav>SocialTalks: 
+        <nav>
             <a href="/index">Home</a>
             <a href="/login">Login</a>
         </nav>
