--- a/Application/templates/base.html
+++ b/Application/templates/base.html
@@ -11,10 +11,18 @@
     </head>
     <body>
         <nav>
-            <a href="/index">Home</a>
-            <a href="/login">Login</a>
+            <a href="{{url_for('index')}}">Home</a>
+            <a href="{{url_for('login')}}">Login</a>
         </nav>
         <hr>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for i in messages %}
+            <li>{{i}}</li>
+            {% endfor %}
+        </ul>
+        {% endif %} {% endwith %}
         {% block con %}
         {% endblock %}            
     </body>
